# webdriver_session

./: .gitignore  README.md  __init__.py  chrome_session.py  pyproject.toml  session.py  setup.cfg  tests.py  utils.py
tests/: chrome.py  remote.py
utils/: chrome.py  logger.py
webdriver_session/: __init__.py  chrome_session.py  session.py
webdriver_session/utils/: chrome.py  logger.py
