[tool.poetry]
name = "WebdriverSession"
version = "0.0.1"
description = ""
authors = ["joismar <joismar@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
pywin32 = "^301"
wget = "^3.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
