[tool.poetry]
name = "webdriver_session"
version = "0.2.1"
description = ""
authors = ["joismar <joismar@outlook.com>"]
license = "MIT"
packages = [
    { include = "webdriver_session" },
    { include = "webdriver_session/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
wget = "^3.2"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
unittest = "^0.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"
