[tool.poetry]
name = "webdriver_session"
version = "0.2.1"
description = ""
authors = ["joismar <joismar@outlook.com>"]
license = "MIT"
packages = [
    { include = "webdriver_session" },
    { include = "webdriver_session/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.23.0"
wget = "^3.2"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
autopep8 = "^2.3.1"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools >= 40.6.0", "wheel"]
build-backend = "poetry.core.masonry.api"
